--- a/Find One/Storyboard/Base.lproj/Auth.storyboard
+++ b/Find One/Storyboard/Base.lproj/Auth.storyboard
@@ -1077,7 +1077,7 @@
                                                                                                 <rect key="frame" x="200" y="0.0" width="100" height="18"/>
                                                                                                 <subviews>
                                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqc-lX-Yvk">
-                                                                                                        <rect key="frame" x="1.6666666666666856" y="1.3333333333333721" width="98.333333333333329" height="15.333333333333336"/>
+                                                                                                        <rect key="frame" x="2.6666666666666856" y="0.66666666666674246" width="97.333333333333329" height="16.666666666666668"/>
                                                                                                         <fontDescription key="fontDescription" name="Outfit-Light" family="Outfit" pointSize="13"/>
                                                                                                         <nil key="textColor"/>
                                                                                                         <nil key="highlightedColor"/>
@@ -1336,7 +1336,7 @@
                                                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="30"/>
                                                                                 <subviews>
                                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fFJ-iH-aBG">
-                                                                                        <rect key="frame" x="126.66666666666669" y="0.0" width="140" height="30"/>
+                                                                                        <rect key="frame" x="127.66666666666669" y="0.0" width="138" height="30"/>
                                                                                         <constraints>
                                                                                             <constraint firstAttribute="width" priority="250" constant="75" id="FYI-gZ-Wcr"/>
                                                                                         </constraints>
@@ -1362,7 +1362,7 @@
                                                                                 <rect key="frame" x="0.0" y="30" width="393" height="30"/>
                                                                                 <subviews>
                                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g6R-wj-gau">
-                                                                                        <rect key="frame" x="143.66666666666666" y="0.0" width="106" height="30"/>
+                                                                                        <rect key="frame" x="145" y="0.0" width="103" height="30"/>
                                                                                         <constraints>
                                                                                             <constraint firstAttribute="width" priority="250" constant="75" id="UNc-i3-Hyj"/>
                                                                                         </constraints>
@@ -2195,7 +2195,7 @@
                         <outlet property="messageLabel" destination="6zg-Mm-S4p" id="4Wf-7t-U0L"/>
                         <outlet property="newPasswordTextField" destination="7XV-tf-CnQ" id="y4v-eB-54f"/>
                         <outlet property="otpField" destination="CC8-kS-Heg" id="ql9-1e-A8D"/>
-                        <outlet property="resetButton" destination="8kj-Y0-8Gy" id="F4m-n9-B78"/>
+                        <outlet property="resetButton" destination="8kj-Y0-8Gy" id="NLq-hC-Fk2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="whk-ah-VBY" sceneMemberID="firstResponder"/>
