--- a/Find One/Module/Home/home/Cell/FeatureCollectionViewCell.xib
+++ b/Find One/Module/Home/home/Cell/FeatureCollectionViewCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -36,7 +35,7 @@
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SEG-z5-V8T">
                                         <rect key="frame" x="0.0" y="0.0" width="167" height="140"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 405" translatesAutoresizingMaskIntoConstraints="NO" id="LnJ-wR-LeF">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="LnJ-wR-LeF">
                                                 <rect key="frame" x="0.0" y="0.0" width="167" height="140"/>
                                             </imageView>
                                         </subviews>
@@ -62,10 +61,10 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="157" height="25"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zLb-XS-UnJ">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="117.33333333333333" height="25"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="122.66666666666667" height="25"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fawaq International School" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iDZ-l4-QGu">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="114.33333333333333" height="25"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="119.66666666666667" height="25"/>
                                                                                 <fontDescription key="fontDescription" name="Manrope-Semibold" family="Manrope" pointSize="13"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -79,7 +78,7 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MhT-72-SkB">
-                                                                        <rect key="frame" x="117.33333333333333" y="0.0" width="14.999999999999986" height="25"/>
+                                                                        <rect key="frame" x="122.66666666666666" y="0.0" width="15" height="25"/>
                                                                         <subviews>
                                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="nYJ-Xu-yAx">
                                                                                 <rect key="frame" x="0.0" y="5" width="15" height="15"/>
@@ -96,10 +95,10 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uvi-uC-nOi">
-                                                                        <rect key="frame" x="132.33333333333334" y="0.0" width="24.666666666666657" height="25"/>
+                                                                        <rect key="frame" x="137.66666666666666" y="0.0" width="19.333333333333343" height="25"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(4.5)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qd-w8-moS">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="24.666666666666668" height="25"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="19.333333333333332" height="25"/>
                                                                                 <fontDescription key="fontDescription" name="Manrope-Semibold" family="Manrope" pointSize="10"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -158,7 +157,7 @@
                                                                                         <rect key="frame" x="18" y="0.0" width="139" height="26"/>
                                                                                         <subviews>
                                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Co-Education" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCL-rU-dS0">
-                                                                                                <rect key="frame" x="0.0" y="5.3333333333333437" width="75.333333333333329" height="15.333333333333336"/>
+                                                                                                <rect key="frame" x="0.0" y="6.6666666666666572" width="68.333333333333329" height="13"/>
                                                                                                 <fontDescription key="fontDescription" name="Manrope-Medium" family="Manrope" pointSize="11"/>
                                                                                                 <nil key="textColor"/>
                                                                                                 <nil key="highlightedColor"/>
@@ -207,7 +206,7 @@
                                                                                         <rect key="frame" x="18" y="0.0" width="139" height="26"/>
                                                                                         <subviews>
                                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fee Starting from 1000SAR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8OV-1C-hn7">
-                                                                                                <rect key="frame" x="0.0" y="5.3333333333333437" width="144.66666666666666" height="15.333333333333336"/>
+                                                                                                <rect key="frame" x="0.0" y="6.6666666666666572" width="134.66666666666666" height="13"/>
                                                                                                 <fontDescription key="fontDescription" name="Manrope-Medium" family="Manrope" pointSize="11"/>
                                                                                                 <nil key="textColor"/>
                                                                                                 <nil key="highlightedColor"/>
@@ -291,8 +290,8 @@
     </objects>
     <resources>
         <image name="Dollar" width="12" height="12"/>
-        <image name="Rectangle 405" width="105" height="92"/>
         <image name="gender" width="21" height="20"/>
+        <image name="placeholder" width="128" height="128"/>
         <image name="star" width="13" height="12"/>
         <namedColor name="cellBGColor">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
