--- a/Find One/Module/Home/home/Cell/SustainableCollectionViewCell.xib
+++ b/Find One/Module/Home/home/Cell/SustainableCollectionViewCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -35,7 +34,7 @@
                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cfl-QY-oB1">
                                         <rect key="frame" x="0.0" y="0.0" width="167" height="125"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 405" translatesAutoresizingMaskIntoConstraints="NO" id="BoB-SW-uJ7">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="BoB-SW-uJ7">
                                                 <rect key="frame" x="0.0" y="0.0" width="167" height="125"/>
                                             </imageView>
                                         </subviews>
@@ -156,7 +155,7 @@
                                                                                         <rect key="frame" x="24" y="0.0" width="133" height="3"/>
                                                                                         <subviews>
                                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="97% Sustainable Institute" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tR6-fe-4oN">
-                                                                                                <rect key="frame" x="0.0" y="-5.3333333333333428" width="120.33333333333333" height="14"/>
+                                                                                                <rect key="frame" x="0.0" y="-5" width="126.33333333333333" height="13"/>
                                                                                                 <fontDescription key="fontDescription" name="Outfit-Medium" family="Outfit" pointSize="11"/>
                                                                                                 <color key="textColor" red="0.44705882352941173" green="0.70980392156862748" blue="0.30196078431372547" alpha="1" colorSpace="calibratedRGB"/>
                                                                                                 <nil key="highlightedColor"/>
@@ -236,7 +235,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="Rectangle 405" width="105" height="92"/>
+        <image name="placeholder" width="128" height="128"/>
         <image name="star" width="13" height="12"/>
         <image name="sustainable" width="19" height="16"/>
         <namedColor name="cellBGColor">
