--- a/Find One/Module/SearchResult/Gallery/Cell/GalleryCollectionViewCell.xib
+++ b/Find One/Module/SearchResult/Gallery/Cell/GalleryCollectionViewCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,7 +19,7 @@
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oDK-Hw-Xep">
                         <rect key="frame" x="0.0" y="0.0" width="110" height="90"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 405" translatesAutoresizingMaskIntoConstraints="NO" id="dq1-Sp-lQg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="dq1-Sp-lQg">
                                 <rect key="frame" x="0.0" y="0.0" width="110" height="90"/>
                             </imageView>
                         </subviews>
@@ -54,6 +53,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="Rectangle 405" width="105" height="92"/>
+        <image name="placeholder" width="128" height="128"/>
     </resources>
 </document>
