--- a/Find One/Storyboard/Base.lproj/Auth.storyboard
+++ b/Find One/Storyboard/Base.lproj/Auth.storyboard
@@ -48,7 +48,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ip2-V8-2J1">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="HhP-QZ-Y24">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
@@ -103,6 +103,9 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="265" height="20"/>
                                                                 <state key="normal" title="Button"/>
                                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                                <connections>
+                                                                    <action selector="languageBtnAction:" destination="xrf-Nf-cgD" eventType="touchUpInside" id="bXf-xj-kj0"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -417,7 +420,7 @@
                                                                                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="40"/>
                                                                                                                 <subviews>
                                                                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_lock_24px" translatesAutoresizingMaskIntoConstraints="NO" id="Cyi-yo-Pgo">
-                                                                                                                        <rect key="frame" x="7.3333333333333357" y="12.666666666666629" width="15" height="15"/>
+                                                                                                                        <rect key="frame" x="7.3333333333333357" y="12.666666666666686" width="15" height="15"/>
                                                                                                                         <constraints>
                                                                                                                             <constraint firstAttribute="height" constant="15" id="JRJ-xY-65z"/>
                                                                                                                             <constraint firstAttribute="width" constant="15" id="YXn-gv-P3n"/>
@@ -553,7 +556,7 @@
                                                                                                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                                         </state>
                                                                                                                         <connections>
-                                                                                                                            <segue destination="hbl-3r-CEz" kind="push" id="5tr-zA-Ll8"/>
+                                                                                                                            <segue destination="hbl-3r-CEz" kind="modal" id="5tr-zA-Ll8"/>
                                                                                                                         </connections>
                                                                                                                     </button>
                                                                                                                 </subviews>
@@ -713,6 +716,7 @@
                         <outlet property="confirmTextField" destination="Zym-uf-Np0" id="Har-R2-41N"/>
                         <outlet property="emailTextField" destination="FkE-uX-nzS" id="hLb-nQ-c7G"/>
                         <outlet property="getStartedButton" destination="cnw-tA-iR1" id="jrv-iG-uor"/>
+                        <outlet property="languageLabel" destination="Tqz-uv-PMk" id="Ddv-lS-eEY"/>
                         <outlet property="loginButton" destination="iHr-JB-Yxz" id="QPF-DL-Mrz"/>
                         <outlet property="mobileTextField" destination="BlS-PZ-Nq5" id="C8y-16-8iq"/>
                         <outlet property="nameTextField" destination="Wug-4S-ctj" id="a3E-66-QEf"/>
@@ -735,7 +739,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rkp-xA-aI8">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vVA-Gb-Qsv">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
@@ -790,6 +794,9 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="265" height="20"/>
                                                                 <state key="normal" title="Button"/>
                                                                 <buttonConfiguration key="configuration" style="plain"/>
+                                                                <connections>
+                                                                    <action selector="languageBtnAction:" destination="hbl-3r-CEz" eventType="touchUpInside" id="uor-57-MU4"/>
+                                                                </connections>
                                                             </button>
                                                         </subviews>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -818,7 +825,7 @@
                                                 <rect key="frame" x="0.0" y="20" width="393" height="739"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="4OV-Bv-Rl6">
-                                                        <rect key="frame" x="0.0" y="89.666666666666629" width="393" height="560"/>
+                                                        <rect key="frame" x="0.0" y="89.666666666666686" width="393" height="560"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ln-vn-FaU">
                                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="180"/>
@@ -839,7 +846,7 @@
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FJF-T6-3hy">
-                                                                <rect key="frame" x="0.0" y="200.00000000000003" width="393" height="89.999999999999972"/>
+                                                                <rect key="frame" x="0.0" y="200" width="393" height="90"/>
                                                                 <subviews>
                                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xSy-HV-1cZ">
                                                                         <rect key="frame" x="46.666666666666657" y="0.0" width="300" height="90"/>
@@ -1013,7 +1020,7 @@
                                                                                 </constraints>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NHn-dA-Blm">
-                                                                                <rect key="frame" x="0.0" y="51.999999999999943" width="300" height="18"/>
+                                                                                <rect key="frame" x="0.0" y="52" width="300" height="18"/>
                                                                                 <subviews>
                                                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="cRT-5v-cEM">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="300" height="18"/>
@@ -1087,7 +1094,7 @@
                                                                                                 <rect key="frame" x="200" y="0.0" width="100" height="18"/>
                                                                                                 <subviews>
                                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqc-lX-Yvk">
-                                                                                                        <rect key="frame" x="2.6666666666666856" y="0.66666666666674246" width="97.333333333333329" height="16.666666666666668"/>
+                                                                                                        <rect key="frame" x="2.6666666666666856" y="0.66666666666662877" width="97.333333333333329" height="16.666666666666668"/>
                                                                                                         <fontDescription key="fontDescription" name="Outfit-Light" family="Outfit" pointSize="13"/>
                                                                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                                         <nil key="highlightedColor"/>
@@ -1158,7 +1165,7 @@
                                                                                                 <rect key="frame" x="0.0" y="0.0" width="96.333333333333329" height="20"/>
                                                                                                 <subviews>
                                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t4H-vv-ehp">
-                                                                                                        <rect key="frame" x="0.0" y="9.3333333333333712" width="96.333333333333329" height="1"/>
+                                                                                                        <rect key="frame" x="0.0" y="9.3333333333333144" width="96.333333333333329" height="1"/>
                                                                                                         <color key="backgroundColor" red="0.85098039219999999" green="0.85098039219999999" blue="0.85098039219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                                         <constraints>
                                                                                                             <constraint firstAttribute="height" constant="1" id="Io0-zJ-CfP"/>
@@ -1195,7 +1202,7 @@
                                                                                                 <rect key="frame" x="203.66666666666669" y="0.0" width="96.333333333333314" height="20"/>
                                                                                                 <subviews>
                                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x3o-AV-4A4">
-                                                                                                        <rect key="frame" x="0.0" y="9.3333333333333712" width="96.333333333333329" height="1"/>
+                                                                                                        <rect key="frame" x="0.0" y="9.3333333333333144" width="96.333333333333329" height="1"/>
                                                                                                         <color key="backgroundColor" red="0.85098039219999999" green="0.85098039219999999" blue="0.85098039219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                                                         <constraints>
                                                                                                             <constraint firstAttribute="height" constant="1" id="Fjz-PO-dqE"/>
@@ -1225,7 +1232,7 @@
                                                                                 </constraints>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pCS-pv-KV0">
-                                                                                <rect key="frame" x="0.0" y="40" width="300" height="40"/>
+                                                                                <rect key="frame" x="0.0" y="39.999999999999943" width="300" height="40"/>
                                                                                 <subviews>
                                                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Bu2-6r-gB4">
                                                                                         <rect key="frame" x="0.0" y="0.0" width="300" height="40"/>
@@ -1356,7 +1363,7 @@
                                                                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         </state>
                                                                                         <connections>
-                                                                                            <segue destination="xrf-Nf-cgD" kind="show" id="UNP-cu-rMh"/>
+                                                                                            <segue destination="xrf-Nf-cgD" kind="modal" id="UNP-cu-rMh"/>
                                                                                         </connections>
                                                                                     </button>
                                                                                 </subviews>
@@ -1453,6 +1460,7 @@
                         <outlet property="keepMeButton" destination="Eax-bf-oLY" id="khf-1j-Yvc"/>
                         <outlet property="keepMeLabel" destination="p89-J7-I9r" id="0d2-ba-t6X"/>
                         <outlet property="languageButton" destination="NYj-8s-Yom" id="wkP-ib-AwS"/>
+                        <outlet property="languageLabel" destination="gck-WZ-7sb" id="PTA-Zh-rFK"/>
                         <outlet property="loginButton" destination="8Cp-Fy-0Nc" id="hYB-wE-5mu"/>
                         <outlet property="orLabel" destination="kHU-eW-Wcu" id="Di3-uL-lVY"/>
                         <outlet property="passwordTextField" destination="r6K-FW-yXc" id="0v6-3z-Lft"/>
@@ -1742,7 +1750,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mQS-R2-DM7">
-                                <rect key="frame" x="40" y="391.66666666666669" width="313" height="94"/>
+                                <rect key="frame" x="40" y="379" width="313" height="94"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Djw-IC-ZY1">
                                         <rect key="frame" x="0.0" y="0.0" width="313" height="94"/>
@@ -2225,7 +2233,7 @@
         <image name="logo" width="186" height="176"/>
         <image name="not-remember" width="14" height="14"/>
         <namedColor name="backgroundColor">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="blueishColor">
             <color red="0.0" green="0.1803921568627451" blue="0.81960784313725488" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
