--- a/Find One/Storyboard/Settings.storyboard
+++ b/Find One/Storyboard/Settings.storyboard
@@ -66,10 +66,10 @@
                                                                     <rect key="frame" x="323" y="0.0" width="30" height="40"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navigation" translatesAutoresizingMaskIntoConstraints="NO" id="9Wh-pa-JXy">
-                                                                            <rect key="frame" x="5" y="11.666666666666664" width="20" height="17"/>
+                                                                            <rect key="frame" x="4" y="9" width="22" height="22"/>
                                                                             <constraints>
-                                                                                <constraint firstAttribute="width" constant="20" id="X76-CA-zl7"/>
-                                                                                <constraint firstAttribute="height" constant="17" id="XQS-Te-RZV"/>
+                                                                                <constraint firstAttribute="width" constant="22" id="X76-CA-zl7"/>
+                                                                                <constraint firstAttribute="height" constant="22" id="XQS-Te-RZV"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                     </subviews>
@@ -136,10 +136,10 @@
                                                                     <rect key="frame" x="323" y="0.0" width="30" height="40"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navigation" translatesAutoresizingMaskIntoConstraints="NO" id="Mem-NU-Iwk">
-                                                                            <rect key="frame" x="5" y="11.666666666666664" width="20" height="17"/>
+                                                                            <rect key="frame" x="4" y="9" width="22" height="22"/>
                                                                             <constraints>
-                                                                                <constraint firstAttribute="height" constant="17" id="ctI-U7-Hrg"/>
-                                                                                <constraint firstAttribute="width" constant="20" id="tHW-rS-UKY"/>
+                                                                                <constraint firstAttribute="height" constant="22" id="ctI-U7-Hrg"/>
+                                                                                <constraint firstAttribute="width" constant="22" id="tHW-rS-UKY"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                     </subviews>
@@ -206,10 +206,10 @@
                                                                     <rect key="frame" x="323" y="0.0" width="30" height="40"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="navigation" translatesAutoresizingMaskIntoConstraints="NO" id="sX4-3G-MUQ">
-                                                                            <rect key="frame" x="5" y="11.666666666666664" width="20" height="17"/>
+                                                                            <rect key="frame" x="4" y="9" width="22" height="22"/>
                                                                             <constraints>
-                                                                                <constraint firstAttribute="width" constant="20" id="Lgu-t3-m4x"/>
-                                                                                <constraint firstAttribute="height" constant="17" id="NhS-Rc-Epb"/>
+                                                                                <constraint firstAttribute="width" constant="22" id="Lgu-t3-m4x"/>
+                                                                                <constraint firstAttribute="height" constant="22" id="NhS-Rc-Epb"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                     </subviews>
@@ -1288,7 +1288,7 @@ Qaaren brings great offers every day – compare prices and offers from over 100
         <image name="about-qaaren" width="1000" height="1093"/>
         <image name="navigation" width="7" height="15"/>
         <namedColor name="backgroundColor">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
